-search-bar image alignment with input field fixed

--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -10,6 +10,10 @@
     align-items: center;
 }
 
+.navbar-search-wrapper {
+    margin: 2%;
+}
+
 .logo {
     height: 40px;
     width: auto;
